--- a/locale/en.json
+++ b/locale/en.json
@@ -2,7 +2,7 @@
 	"Database@proto": "PostgreSQL",
 	"WildcardError": {
 		"i@proto": "wildcard $i must be of type non-null object, value: {{-type,valueType}}",
-		"i@hades": "wildcard ~[$i] must be of type non-null object, ~[value] {{-type,valueType@hades}}",
+		"i@hades": "wildcard ~[$i] must be of type non-null ~{object}, ~[value] {{-type,valueType@hades}}",
 		"r@proto": "wildcard $r must be one of type string or an instance of Array, value: {{-type,valueType}}",
 		"r@hades": "wildcard ~[$r] must be one of type ~{string} or an instance of ~{Array}, ~[value] {{-type,valueType@hades}}",
 		"$@proto": "wildcard $$ must be of type string, value: {{-type,valueType}}",
