--- a/locale/en.json
+++ b/locale/en.json
@@ -1,11 +1,11 @@
 {
 	"Database@proto": "PostgreSQL",
 	"WildcardError": {
-		"i@proto": "wildcard $i must be of type non-null object, value: {{-type,valueType}}",
+		"i@proto": "wildcard '$i' must be of type non-null object, value: {{-type,valueType}}",
 		"i@hades": "wildcard ~[$i] must be of type non-null ~{object}, ~[value] {{-type,valueType@hades}}",
-		"r@proto": "wildcard $r must be one of type string or an instance of Array, value: {{-type,valueType}}",
+		"r@proto": "wildcard '$r' must be one of type string or an instance of Array, value: {{-type,valueType}}",
 		"r@hades": "wildcard ~[$r] must be one of type ~{string} or an instance of ~{Array}, ~[value] {{-type,valueType@hades}}",
-		"$@proto": "wildcard $$ must be of type string, value: {{-type,valueType}}",
+		"$@proto": "wildcard '$$' must be of type string, value: {{-type,valueType}}",
 		"$@hades": "wildcard ~[$$] must be of type ~{string}, ~[value] {{-type,valueType@hades}}",
 		"unknown@proto": "unknown wildcard, value: {{-type,valueType}}",
 		"unknown@hades": "unknown ~[wildcard], ~[value] {{-type,valueType@hades}}"
